# Image-Counter

./: .gitignore  CMakeLists.txt  README.md  app.manifest  resource.h  resources.rc
src/: ImageCounter.h  ImageDetector.cpp  Localization.cpp  MainWindow.cpp  SettingsDialog.cpp  SettingsDialog.h  main.cpp
